develoyment/mygp-app/mygp-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-gp-web
  namespace: my-gp
  labels:
    app: web
    tier: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:1.14
        ports:
        - containerPort: 80
